@@ -16,9 +16,6 @@
 
 package stroom.index;
 
-import stroom.datasource.api.v2.AnalyzerType;
-import stroom.datasource.api.v2.FieldType;
-import stroom.datasource.api.v2.IndexField;
 import stroom.docref.DocRef;
 import stroom.index.impl.IndexDocument;
 import stroom.index.impl.IndexFields;
@@ -37,8 +34,12 @@ import stroom.pipeline.factory.PipelineDataCache;
 import stroom.pipeline.factory.PipelineFactory;
 import stroom.pipeline.shared.PipelineDoc;
 import stroom.pipeline.shared.data.PipelineData;
+import stroom.pipeline.shared.data.PipelineDataBuilder;
 import stroom.pipeline.shared.data.PipelineDataUtil;
 import stroom.pipeline.state.FeedHolder;
+import stroom.query.api.datasource.AnalyzerType;
+import stroom.query.api.datasource.FieldType;
+import stroom.query.api.datasource.IndexField;
 import stroom.search.extraction.FieldValue;
 import stroom.task.api.SimpleTaskContext;
 import stroom.test.AbstractProcessIntegrationTest;
@@ -60,7 +61,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 class TestIndexingFilter extends AbstractProcessIntegrationTest {
 
-    private static final String PIPELINE = "TestIndexingFilter/TestIndexingFilter.Pipeline.data.xml";
+    private static final String PIPELINE = "TestIndexingFilter/TestIndexingFilter.Pipeline.json";
 
     @Inject
     private Provider<PipelineFactory> pipelineFactoryProvider;
@@ -102,10 +103,10 @@ class TestIndexingFilter extends AbstractProcessIntegrationTest {
         final List<IndexDocument> documents = doTest("TestIndexDocumentFilter/SimpleDocuments.xml", indexFields);
 
         assertThat(documents.size()).isEqualTo(3);
-        final IndexDocument doc = documents.get(0);
+        final IndexDocument doc = documents.getFirst();
         final List<FieldValue> list = getFields(doc, "sid2");
         assertThat(list.size()).isOne();
-        final FieldValue fieldValue = list.get(0);
+        final FieldValue fieldValue = list.getFirst();
         final IndexField field = fieldValue.field();
 
 
@@ -209,9 +210,9 @@ class TestIndexingFilter extends AbstractProcessIntegrationTest {
         return pipelineScopeRunnable.scopeResult(() -> {
             // Setup the index.
             final DocRef indexRef = indexStore.createDocument("Test index");
-            final LuceneIndexDoc index = indexStore.readDocument(indexRef);
+            LuceneIndexDoc index = indexStore.readDocument(indexRef);
             index.setFields(indexFields);
-            indexStore.writeDocument(index);
+            index = indexStore.writeDocument(index);
 
             // Setup the error handler.
             final LoggingErrorReceiver loggingErrorReceiver = new LoggingErrorReceiver();
@@ -221,9 +222,11 @@ class TestIndexingFilter extends AbstractProcessIntegrationTest {
             final String data = StroomPipelineTestFileUtil.getString(PIPELINE);
             final DocRef pipelineRef = PipelineTestUtil.createTestPipeline(pipelineStore, data);
             final PipelineDoc pipelineDoc = pipelineStore.readDocument(pipelineRef);
-            pipelineDoc.getPipelineData().addProperty(PipelineDataUtil.createProperty("indexingFilter",
+            final PipelineDataBuilder builder = new PipelineDataBuilder(pipelineDoc.getPipelineData());
+            builder.addProperty(PipelineDataUtil.createProperty("indexingFilter",
                     "index",
                     indexRef));
+            pipelineDoc.setPipelineData(builder.build());
             pipelineStore.writeDocument(pipelineDoc);
 
             // Create the parser.
