@@ -29,8 +29,8 @@ import stroom.index.shared.IndexVolumeFields;
 import stroom.index.shared.IndexVolumeGroup;
 import stroom.index.shared.ValidationResult;
 import stroom.node.api.NodeInfo;
-import stroom.query.api.v2.ExpressionOperator;
-import stroom.query.api.v2.ExpressionUtil;
+import stroom.query.api.ExpressionOperator;
+import stroom.query.api.ExpressionUtil;
 import stroom.security.api.SecurityContext;
 import stroom.security.shared.AppPermission;
 import stroom.statistics.api.InternalStatisticEvent;
@@ -40,7 +40,6 @@ import stroom.task.api.TaskContext;
 import stroom.task.api.TaskContextFactory;
 import stroom.util.AuditUtil;
 import stroom.util.NextNameGenerator;
-import stroom.util.NullSafe;
 import stroom.util.date.DateUtil;
 import stroom.util.entityevent.EntityAction;
 import stroom.util.entityevent.EntityEvent;
@@ -54,6 +53,7 @@ import stroom.util.logging.LambdaLogger;
 import stroom.util.logging.LambdaLoggerFactory;
 import stroom.util.logging.LogUtil;
 import stroom.util.shared.Clearable;
+import stroom.util.shared.NullSafe;
 import stroom.util.shared.ResultPage;
 import stroom.util.sysinfo.HasSystemInfo;
 import stroom.util.sysinfo.SystemInfoResult;
@@ -174,7 +174,7 @@ public class IndexVolumeServiceImpl implements IndexVolumeService, Clearable, En
             validationResult = ValidationResult.error("You must select a node for the volume.");
         }
         if (validationResult.isOk()
-                && NullSafe.isBlankString(indexVolume, IndexVolume::getPath)) {
+            && NullSafe.isBlankString(indexVolume, IndexVolume::getPath)) {
             validationResult = ValidationResult.error("You must provide a path for the volume.");
         }
 
@@ -207,8 +207,8 @@ public class IndexVolumeServiceImpl implements IndexVolumeService, Clearable, En
         final boolean foundDupPathAndNode = volumeGroups.stream()
                 .anyMatch(dbVol ->
                         !Objects.equals(dbVol.getId(), indexVolume.getId())
-                                && Objects.equals(getAbsVolumePath(dbVol), getAbsVolumePath(indexVolume))
-                                && Objects.equals(dbVol.getNodeName(), indexVolume.getNodeName()));
+                        && Objects.equals(getAbsVolumePath(dbVol), getAbsVolumePath(indexVolume))
+                        && Objects.equals(dbVol.getNodeName(), indexVolume.getNodeName()));
 
         if (foundDupPathAndNode) {
             return ValidationResult.error(
@@ -233,8 +233,8 @@ public class IndexVolumeServiceImpl implements IndexVolumeService, Clearable, En
         final Set<String> dupGroupNames = volumes.stream()
                 .filter(dbVol ->
                         !Objects.equals(dbVol.getIndexVolumeGroupId(), indexVolume.getIndexVolumeGroupId())
-                                && Objects.equals(dbVol.getNodeName(), indexVolume.getNodeName())
-                                && Objects.equals(getAbsVolumePath(dbVol), path))
+                        && Objects.equals(dbVol.getNodeName(), indexVolume.getNodeName())
+                        && Objects.equals(getAbsVolumePath(dbVol), path))
                 .map(dbVol -> NullSafe.get(
                         indexVolumeGroupService.get(dbVol.getIndexVolumeGroupId()),
                         IndexVolumeGroup::getName))
@@ -266,7 +266,7 @@ public class IndexVolumeServiceImpl implements IndexVolumeService, Clearable, En
         if (!Files.exists(path)) {
             try {
                 Files.createDirectories(path);
-            } catch (IOException e) {
+            } catch (final IOException e) {
                 return ValidationResult.error(LogUtil.message(
                         "Error creating index volume path '{}': {}",
                         path,
@@ -290,17 +290,17 @@ public class IndexVolumeServiceImpl implements IndexVolumeService, Clearable, En
                 LOGGER.debug("About to delete file {}", tempFile);
                 try {
                     Files.deleteIfExists(tempFile);
-                } catch (IOException e) {
+                } catch (final IOException e) {
                     LOGGER.error("Unable to delete temporary file {}. You can manually delete this file.",
                             tempFile, e);
                 }
             }, 5, TimeUnit.SECONDS);
 
-        } catch (IOException e) {
+        } catch (final IOException e) {
             return ValidationResult.error(LogUtil.message(
                     "Error creating test file in directory {}. " +
-                            "Does Stroom have the right permissions on this directory? " +
-                            "Error message: {} {}",
+                    "Does Stroom have the right permissions on this directory? " +
+                    "Error message: {} {}",
                     path,
                     e.getClass().getSimpleName(),
                     e.getMessage()));
@@ -322,13 +322,13 @@ public class IndexVolumeServiceImpl implements IndexVolumeService, Clearable, En
     }
 
     @Override
-    public IndexVolume create(IndexVolume indexVolume) {
+    public IndexVolume create(final IndexVolume indexVolume) {
         AuditUtil.stamp(securityContext, indexVolume);
 
         final List<String> names = indexVolumeDao.getAll().stream().map(i -> Strings.isNullOrEmpty(i.getNodeName())
                         ? ""
                         : i.getNodeName())
-                .collect(Collectors.toList());
+                .toList();
         indexVolume.setNodeName(Strings.isNullOrEmpty(indexVolume.getNodeName())
                 ? NextNameGenerator.getNextName(names, "New index volume")
                 : indexVolume.getNodeName());
@@ -349,7 +349,7 @@ public class IndexVolumeServiceImpl implements IndexVolumeService, Clearable, En
     }
 
     @Override
-    public IndexVolume update(IndexVolume indexVolume) {
+    public IndexVolume update(final IndexVolume indexVolume) {
         final IndexVolume loadedIndexVolume = securityContext.secureResult(() ->
                 indexVolumeDao.fetch(indexVolume.getId()).orElse(
                         null));
@@ -485,14 +485,14 @@ public class IndexVolumeServiceImpl implements IndexVolumeService, Clearable, En
                                    final String type,
                                    final Long bytes) {
         if (bytes != null) {
-            SortedMap<String, String> tags = ImmutableSortedMap.<String, String>naturalOrder()
+            final SortedMap<String, String> tags = ImmutableSortedMap.<String, String>naturalOrder()
                     .put("Id", String.valueOf(volume.getId()))
                     .put("Path", volume.getPath())
                     .put("Type", type)
                     .put("Node", nodeInfo.getThisNodeName())
                     .build();
 
-            InternalStatisticEvent event = InternalStatisticEvent.createValueStat(
+            final InternalStatisticEvent event = InternalStatisticEvent.createValueStat(
                     InternalStatisticKey.VOLUMES, timeMs, tags, bytes.doubleValue());
             events.add(event);
         }
@@ -555,7 +555,7 @@ public class IndexVolumeServiceImpl implements IndexVolumeService, Clearable, En
         } else {
             throw new IndexException(
                     "Unable to find any non-full index volumes for index volume group '"
-                            + groupName + "' for node " + nodeName);
+                    + groupName + "' for node " + nodeName);
         }
     }
 
@@ -701,9 +701,9 @@ public class IndexVolumeServiceImpl implements IndexVolumeService, Clearable, En
         @Override
         public String toString() {
             return "VolumeMap{" +
-                    "createTime=" + Instant.ofEpochMilli(createTime) +
-                    "groupNameToVolumesMap(size)=" + groupNameToVolumesMap.size() +
-                    '}';
+                   "createTime=" + Instant.ofEpochMilli(createTime) +
+                   "groupNameToVolumesMap(size)=" + groupNameToVolumesMap.size() +
+                   '}';
         }
     }
 
@@ -749,9 +749,9 @@ public class IndexVolumeServiceImpl implements IndexVolumeService, Clearable, En
         @Override
         public String toString() {
             return "VolGroupNode{" +
-                    "groupName='" + groupName + '\'' +
-                    ", nodeName='" + nodeName + '\'' +
-                    '}';
+                   "groupName='" + groupName + '\'' +
+                   ", nodeName='" + nodeName + '\'' +
+                   '}';
         }
     }
 }
