@@ -15,7 +15,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class GenerateProxyExpectedYaml {
 
@@ -41,10 +40,10 @@ public class GenerateProxyExpectedYaml {
      * NOTE: This main method is called from the stroom-app gradle build so if it
      * is moved you will need to refactor that too.
      */
-    public static void main(String[] args) throws IOException {
+    public static void main(final String[] args) throws IOException {
 
-        Path defaultsFile;
-        Path schemaFile;
+        final Path defaultsFile;
+        final Path schemaFile;
         if (args.length == 2) {
             defaultsFile = Paths.get(args[0]);
             schemaFile = Paths.get(args[1]);
@@ -53,7 +52,7 @@ public class GenerateProxyExpectedYaml {
             schemaFile = null;
         }
 
-        Path parentDir = defaultsFile.getParent();
+        final Path parentDir = defaultsFile.getParent();
 
         if (!Files.isDirectory(parentDir)) {
             LOGGER.info("Creating directory {}", defaultsFile.toAbsolutePath());
@@ -62,13 +61,13 @@ public class GenerateProxyExpectedYaml {
 
         final String generatedYaml = TestProxyYamlUtil.getYamlFromJavaModel();
 
-        List<String> outputLines;
+        final List<String> outputLines;
         if (args.length > 0) {
             // called for a specific output location so add a header
 
             outputLines = generatedYaml.replace("---", "---\n" + HEADER)
                     .lines()
-                    .collect(Collectors.toList());
+                    .toList();
         } else {
             // called manually for TestYamlUtil so don't modify the content else it will break the test
             outputLines = removeDropWizardLines(generatedYaml);
@@ -94,7 +93,7 @@ public class GenerateProxyExpectedYaml {
                         line.startsWith("---")
                                 || line.startsWith(PROXY_CONFIG + ":")
                                 || line.startsWith(" "))
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
