@@ -23,6 +23,7 @@ import event.logging.AuthenticateOutcomeReason;
 import event.logging.Data;
 import event.logging.OtherObject;
 import event.logging.ViewEventAction;
+import jakarta.annotation.Nullable;
 import jakarta.inject.Inject;
 import jakarta.inject.Provider;
 import jakarta.servlet.http.HttpServletRequest;
@@ -30,7 +31,6 @@ import jakarta.ws.rs.RedirectionException;
 import jakarta.ws.rs.WebApplicationException;
 import jakarta.ws.rs.core.MultivaluedMap;
 import jakarta.ws.rs.core.Response.Status;
-import org.checkerframework.checker.nullness.qual.Nullable;
 import org.jose4j.jwk.JsonWebKey;
 import org.jose4j.jwk.PublicJsonWebKey;
 import org.slf4j.Logger;
@@ -39,7 +39,6 @@ import org.slf4j.LoggerFactory;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @AutoLogged
 class OpenIdResourceImpl implements OpenIdResource {
@@ -89,7 +88,7 @@ class OpenIdResourceImpl implements OpenIdResource {
                 prompt);
 
         if (result.getStatus().isPresent() && result.getStatus().get().isNew()) {
-            AuthStatus status = result.getStatus().get();
+            final AuthStatus status = result.getStatus().get();
 
             final AuthenticateEventAction.Builder<Void> eventBuilder = event.logging.AuthenticateEventAction.builder()
                     .withAction(AuthenticateAction.LOGON)
@@ -188,7 +187,7 @@ class OpenIdResourceImpl implements OpenIdResource {
                     final List<Map<String, Object>> maps = list.stream()
                             .map(jwk ->
                                     jwk.toParams(JsonWebKey.OutputControlLevel.PUBLIC_ONLY))
-                            .collect(Collectors.toList());
+                            .toList();
 
                     final Map<String, List<Map<String, Object>>> keys = new HashMap<>();
                     keys.put("keys", maps);
